# My-trading-bot

./: .claudeignore  .dockerignore  .env.example  .gitignore  =0.21.0  Dockerfile  README.md  api.py  backtest_runner.py  cloudbuild.yaml  dev.ps1  discord_bot.py  export_strategy.py  main.py  pytest.ini  requirements.txt  run_backtest_rust.sh  run_random.ps1  start-prod.ps1  test_backtest.py  trading_bot.py
automation/: __init__.py  bot_analytics.py  claude_analyzer.py  daily_report.py  scheduler.py  weekly_report.py
backtest/: __init__.py  engine.py  metrics.py  optimizer.py  resource_monitor.py
config/: __init__.py  constants.py  settings.py
core/: __init__.py  container.py  trade_record.py
data/: __init__.py  fetcher.py  storage.py  stream.py  tqqq_daily.csv
database/: __init__.py  firestore.py
deploy/: Dockerfile  Dockerfile.api  Dockerfile.trading-bot  build.sh  cloudbuild.yaml  cloudrun.yaml  gce_setup.sh  scheduler.sh  setup-scheduler.ps1  setup-scheduler.sh  setup_github_secrets.sh  spot_vm_monitor.sh
docs/: RAG_IMPLEMENTATION_PLAN.md
execution/: __init__.py  broker.py  orders.py  portfolio.py
rust/: Cargo.toml
rust/backtest-engine/: Cargo.toml
rust/backtest-engine/src/: engine.rs  execution.rs  lib.rs  main.rs  metrics.rs  portfolio.rs
rust/backtest-engine/src/data/: loader.rs  mod.rs  synthetic.rs
rust/backtest-engine/src/indicators/: atr.rs  bollinger.rs  ema.rs  mod.rs  rsi.rs  sma.rs
rust/backtest-engine/src/signals/: generator.rs  mod.rs
rust/common/: Cargo.toml
rust/common/src/: config.rs  error.rs  lib.rs  types.rs
(+90 files in other folders)
