[workspace]
members = ["common", "backtest-engine"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["doguri"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
